<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/explorarFragment"
        android:icon="@drawable/compass_icon"
        android:title="@string/explorar"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/buscarFragment"
        android:icon="@drawable/explore_icon"
        android:title="@string/buscar"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/planificarFavoritosFragment"
        android:icon="@drawable/favorite_icon"
        android:title="@string/favoritos"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/cuentaFragment"
        android:icon="@drawable/account_icon"
        android:title="@string/cuenta"
        app:showAsAction="always">
    </item>


</menu>