<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    tools:context=".LoginFragment">


    <TextView
        android:id="@+id/textView_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_principal_login"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_icono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="1000dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6">

        <ImageView
            android:id="@+id/imageview_icono"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/app_icon" />

    </androidx.cardview.widget.CardView>



    <EditText
        android:id="@+id/edittext_correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/account_icon"
        android:hint="Introduce tu correo"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/pass_icon"
        android:hint="Introduce tu contraseña"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_correo"
        app:layout_constraintStart_toStartOf="@+id/edittext_correo"
        app:layout_constraintTop_toBottomOf="@+id/edittext_correo" />

    <Button
        android:id="@+id/boton_login"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/texto_boton_login"
        app:layout_constraintEnd_toStartOf="@+id/boton_registrar"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/edittext_password"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password" />

    <Button
        android:id="@+id/boton_registrar"
        android:layout_width="170dp"
        android:layout_height="wrap_content"

        android:text="@string/texto_boton_registrarse"
        app:layout_constraintBottom_toBottomOf="@+id/boton_login"
        app:layout_constraintEnd_toEndOf="@+id/edittext_password"
        app:layout_constraintStart_toEndOf="@+id/boton_login"
        app:layout_constraintTop_toTopOf="@+id/boton_login"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/boton_login_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Login con google"
        app:layout_constraintEnd_toEndOf="@+id/boton_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/boton_login"
        app:layout_constraintTop_toBottomOf="@+id/boton_login" />

    <Button
        android:id="@+id/boton_restablecer_contraseña"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="restablecer contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_login_google" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15595075" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />


</androidx.constraintlayout.widget.ConstraintLayout>